Kubernetes-Basic-Advance-Labs/Kubernetes-LAB-DEMO/demo-deployment-svc-cip/demo-deployment-svc-cip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec: 
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
